--- a/docker-compose-v1.yml
+++ b/docker-compose-v1.yml
@@ -1,18 +1,18 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: webapplication3
+  name: bluegreendeploymentdemo
 spec:
   replicas: 1
   template:
     metadata:
       name: 
       labels:
-        app: webapplication3
+        app: bluegreendeploymentdemo
     spec:
       containers:
       - name: webapplication3
-        image: rkulkarnidevopsdemo.azurecr.io/webapplication2:v1
+        image: rkulkarnidevopsdemo.azurecr.io/bluegreendeploymentdemo:v1
         imagePullPolicy: Always
         readinessProbe:
           tcpSocket:
