--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
   bluegreendeploymentdemo:
     image: bluegreendeploymentdemo
     build:
-      context: "/BlueGreenDeploymentDemo"
+      context: ".\BlueGreenDeploymentDemo"
       dockerfile: Dockerfile
