--- a/docker-compose-v1.yml
+++ b/docker-compose-v1.yml
@@ -1,17 +1,17 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: blue
+  name: green
 spec:
   replicas: 1
   template:
     metadata:
       name: 
       labels:
-        app: blue
+        app: green
     spec:
       containers:
-      - name: blue
+      - name: green
         image: rkulkarnidevopsdemo.azurecr.io/bluegreendeploymentdemo:v4
         imagePullPolicy: Always
         readinessProbe:
