--- a/BlueGreenDeploymentDemo/BlueGreenDeploymentDemo.csproj
+++ b/BlueGreenDeploymentDemo/BlueGreenDeploymentDemo.csproj
@@ -250,15 +250,15 @@
   <Target Name="AfterBuild">
   </Target> -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)bin\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\bin\*.*"
-xcopy "$(ProjectDir)content\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\content\*.*"
-xcopy "$(ProjectDir)fonts\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\fonts\*.*"
-xcopy "$(ProjectDir)Scripts\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\Scripts\*.*"
-xcopy "$(ProjectDir)Views\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\Views\*.*"
-xcopy "$(ProjectDir)ApplicationInsights.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
-xcopy "$(ProjectDir)favicon.ico"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
-xcopy "$(ProjectDir)Global.asax"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
-xcopy "$(ProjectDir)Web.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
-xcopy "$(ProjectDir)packages.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y "$(ProjectDir)bin\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\bin\*.*"
+xcopy /Y "$(ProjectDir)content\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\content\*.*"
+xcopy /Y "$(ProjectDir)fonts\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\fonts\*.*"
+xcopy /Y "$(ProjectDir)Scripts\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\Scripts\*.*"
+xcopy /Y "$(ProjectDir)Views\*.*"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\Views\*.*"
+xcopy /Y "$(ProjectDir)ApplicationInsights.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
+xcopy /Y "$(ProjectDir)favicon.ico"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
+xcopy /Y "$(ProjectDir)Global.asax"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
+xcopy /Y "$(ProjectDir)Web.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"
+xcopy /Y "$(ProjectDir)packages.config"  "C:\Rahul\Projects\BlueGreenDeploymentDemo\BlueGreenDeployment\BlueGreenDeploymentDemo\obj\docker\publish\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
