--- a/docker-compose-v1.yml
+++ b/docker-compose-v1.yml
@@ -1,18 +1,18 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: green
+  name: blue
 spec:
   replicas: 1
   template:
     metadata:
       name: 
       labels:
-        app: green
+        app: blue
     spec:
       containers:
-      - name: green
-        image: rkulkarnidevopsdemo.azurecr.io/bluegreendeploymentdemo:v5
+      - name: blue
+        image: rkulkarnidevopsdemo.azurecr.io/bluegreendeploymentdemo:v6
         imagePullPolicy: Always
         readinessProbe:
           tcpSocket:
